Fixed overflow error

--- a/src/styles/local/layouts/_app-layout.scss
+++ b/src/styles/local/layouts/_app-layout.scss
@@ -5,6 +5,7 @@
     
     display: flex; flex-direction: column;
     margin: var(--margin);
+    overflow: hidden;
 
     .top-bar { height: 30px }
     .dock-layout { height: calc(100vh - 30px - (var(--margin) * 2)) }
